--- a/manifest.yml
+++ b/manifest.yml
@@ -2,4 +2,4 @@
 applications:
 - name: cpu-checker
   memory: 512Mb
-  buildpack: "https://github.com/Altoros/ruby-buildpack#power"
+  # buildpack: "https://github.com/Altoros/ruby-buildpack#power"
